<resources>
    <string name="app_name">SOS--VN</string>
    <string name="textsosvn">SOS_VN</string>
    <string name="title_activity_a">AActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">WELCOME</string>
    <string name="name_account">Enter Name</string>
    <string name="content_name_account">Input Name Account</string>
    <string name="login">LOGIN</string>
    <string name="pass_account">Enter Pass</string>
    <string name="remember_me">Remember Me?</string>
    <string name="not_account">Don\'t have a account ?</string>
    <string name="register">Sign Up</string>
    <string name="person">Person</string>
    <string name="username">UserName</string>
    <string name="enter_address">Enter Address</string>
    <string name="input_address">Input Address</string>
    <string name="enter_numberphone">Enter NumberPhone</string>
    <string name="input_numberphone">InputNumberHome</string>
    <string name="none_service">None</string>
    <string name="car">Car</string>
    <string name="motorcycler">Motorcycler</string>
    <string name="select_service">Select Service</string>
    <string name="select_location">Select Location</string>
    <string-array name="menuservice">
        <item>None</item>
        <item>Car</item>
        <item>Moto</item>
    </string-array>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAAlmqP_oCSJ1fD5PVfEJEScm0iUgoJFzI</string>
    <string name="hint_search">Search....</string>
</resources>
