<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_10"
    android:background="@drawable/custom_register_background"
    tools:context=".screen.Register.RegisterFragment">

    <TextView
        android:id="@+id/textViewTitlePerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/person"
        android:textSize="@dimen/sp_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:hint="@string/name_account"
        app:endIconMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewTitlePerson"
        app:layout_constraintTop_toBottomOf="@id/textViewTitlePerson"
        app:startIconContentDescription="@string/content_name_account"
        app:startIconDrawable="@drawable/ic_name_account">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:hint="@string/pass_account"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputNameLayout"
        app:startIconContentDescription="@string/content_name_account"
        app:startIconDrawable="@drawable/ic_pass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputAddressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:hint="@string/enter_address"
        app:endIconMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textInputPassLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputPassLayout"
        app:startIconContentDescription="@string/input_address"
        app:startIconDrawable="@drawable/ic_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputNumberPhoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:hint="@string/enter_numberphone"
        app:endIconMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputAddressLayout"
        app:layout_constraintTop_toBottomOf="@id/textInputAddressLayout"
        app:startIconContentDescription="@string/input_numberphone"
        app:startIconDrawable="@drawable/ic_phone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNumberPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>