<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.Register.LoginFragment">

    <ImageView
        android:id="@+id/imageViewIconMember"
        android:layout_width="@dimen/dp_70"
        android:layout_height="70dp"
        android:layout_marginTop="@dimen/dp_100"
        android:src="@drawable/ic_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutFormLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_30"
        android:background="@drawable/custom_login_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewIconMember">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:hint="@string/name_account"
            app:endIconMode="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconContentDescription="@string/content_name_account"
            app:startIconDrawable="@drawable/ic_name_account">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginEnd="@dimen/dp_10"
            android:hint="@string/pass_account"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputNameLayout"
            app:startIconContentDescription="@string/content_name_account"
            app:startIconDrawable="@drawable/ic_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPassLayout" />

        <CheckBox
            android:id="@+id/checkBoxAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/textInputPassLayout"
            app:layout_constraintTop_toBottomOf="@id/buttonLogin" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/remember_me"
            app:layout_constraintStart_toEndOf="@+id/checkBoxAccount"
            app:layout_constraintTop_toTopOf="@+id/checkBoxAccount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewForget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:layout_marginRight="28dp"
            android:text="Forgot Password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/checkBoxAccount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewNotAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/not_account"
        app:layout_constraintStart_toStartOf="@id/guideLine"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutFormLogin" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        app:layout_constraintStart_toEndOf="@id/textViewNotAccount"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutFormLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>
